Fix footer logo not aligned

--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -21,6 +21,10 @@
     flex: 1;
     width: 25.5%;
     margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     &__logo {
       width: 90%;
